2009-09-15  Akira TAGOH  <tagoh@redhat.com>

	* data/xinputinfo.sh.in: output the value if the configuration is
	the script or not.

	* tests/main.c (init): set IMSETTINGS_HELPER_PATH to xinputinfo.sh
	working without the real installation.

	* tests/rhbz_523349.c: new testcase.

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Add a reference of the environment variable to get the unit testing
	working.
	(_IMSETTINGS_DEFUNC_PROPERTY): update the variables before looking
	if the configuration is based on the script. (rhbz#523349)
	(imsettings_info_is_script): new.

2009-09-11  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (_get_process_info_by_pid): new.
	(_watch_im_status_cb): unref'd the instance here to not keep
	the process running as zombie. (rhbz#522689)
	(_stop_process): don't remove the instance from the hash table yet.

2009-09-08  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_finalize): unreference the object.

2009-09-01  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.3.

	* NEWS: update.

	* src/factory.c (_process_info_unref): stop watching fd.
	(_logger_write_cb): avoid getting stuck to wait for read data.
	(_watch_im_status_cb): avoid restarting the unnecessary process.
	(_imsettings_manager_start_im_aux): new.
	(_imsettings_manager_start_im_main): new.

2009-08-27  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.2.

	* NEWS: update.

	* src/factory.c (disconnected_cb): exit with the disconnect signal
	properly.

	* imsettings/imsettings-observer.c (imsettings_observer_setup):
	Set a flag to not exit with the disconnect signal.

2009-08-26  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Apply the environment variables properly.

2009-08-14  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.1.

	* NEWS: update.

2009-08-12  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-object.c (imsettings_object_dump): 
	Fix memory leaks.
